--- a/home/home.css
+++ b/home/home.css
@@ -1,3 +1,7 @@
+:root {
+    --slide-duration: 500ms;
+}
+
 h2 {
     font-size: 2.5rem;
 }
@@ -12,39 +16,94 @@ h2 {
 /* Section: Chapters */
 /*********************/
 
-#capitulos {
-    min-height: 100vh;
+.slider-button__wrapper {
+    position: absolute;
+    font-size: 3rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 4rem;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
 }
 
-#capitulos > .chapter {
+.forwards-button {
+    left: unset;
+}
+
+.slider-button {
+    cursor: pointer;
+}
+
+#capitulos {
+    position: relative;
+    overflow-x: hidden;
+}
+
+#capitulos .chapter {
+    position: absolute;
     padding-top: 5rem;
+    height: 100%;
+}
+
+.chapter[data-index="2"] {
+    left: 100%;
+}
+
+.chapter[data-index="3"] {
+    left: 200%;
+}
+
+.chapter[data-index="4"] {
+    left: 300%;
+}
+
+.chapter-container {
     min-height: 100vh;
+    transition: transform cubic-bezier(.77,0,.18,1) var(--slide-duration);
 }
 
 .chapter-wrapper {
 	display: grid;
 	gap: var(--content-distance) 3rem;
 	grid-template-areas: 'title'
-                         'image'
                          'text'
                          'profile'
                          'button';
     grid-template-columns: 1fr;
     max-width: var(--content-max-width);
     margin-inline: auto;
+    position: relative;
+}
+
+.chapter-hero__img-wrapper {
+    position: absolute;
+    inset: 0;
+}
+
+.chapter-hero__img {
+    background-image: url(/static/Screenshot\ 1.png);
+    background-position: center;
+    background-size: cover;
+
+    position: absolute;
+    inset: 0;
 }
 
 .chapter {
-    padding: 2rem 3rem;
+    padding: 2rem 4.5rem;
     width: 100%;
     background-color: var(--color-primary);
     background-size: cover;
     display: flex;
     align-items: center;
+    position: relative;
 }
 
-.chapter[data-index="1"] {
-    background-image: url(/static/Screenshot\ 1.png);
+.chapter[data-index="1"] > .chapter-hero__img {
+    transform-style: preserve-3d;
 }
 
 .chapter-title {
@@ -53,7 +112,7 @@ h2 {
 
 .chapter-description {
     grid-area: text;
-    font-size: 1.1rem;
+    font-size: 1.4rem;
 }
 
 .chapter-img {
@@ -64,23 +123,35 @@ h2 {
     width: 100%;
     height: 100%;
     background: var(--color-primary);
-    padding:1rem 1.5rem;
+    padding: 1rem 1.5rem;
     border-radius: .5rem;
     overflow: hidden;
 }
 
 .chapter-avatar {
     grid-area: profile;
+    display: flex;
+    margin-inline: auto;
 }
 
 .author-img {
-    display: none;
+    width: 2.5rem;
+    height: 2.5rem;
+    overflow: hidden;
+    border-radius: 50%;
+    margin-right: .5rem;
+}
+
+.author-img img {
+    width: 100%;
+    height: 100%;
 }
 
 .author-name {
     font-size: 1.25rem;
-    font-family: var(--font-headline);
-    text-align: center;
+    display: flex;
+    align-items: center;
+    opacity: .8;
 }
 
 .see-chapter {
@@ -99,27 +170,39 @@ h2 {
     position: unset;
 }
 
+#comparacao .chapter-wrapper {
+    grid-template-areas: 'title'
+                         'image'
+                         'text'
+                         'profile'
+                         'button';
+}
+
 #comparacao .chapter-img {
     display: flex;
     justify-content: center;
 }
 
 #img__stripped-pyjamas {
-    transform: translateX(4rem) rotate(-5deg);
+    transform: translateX(30%) rotate(-5deg);
 }
 
 #img__nazi-fooler {
-    transform: translateX(-4rem) rotate(5deg);
+    transform: translateX(-30%) rotate(5deg);
 }
 
 #comparacao .chapter-img:hover #img__nazi-fooler {
-    transform: translateX(-2rem) rotate(7.5deg) scale(1.05);
+    transform: translateX(-15%) rotate(7.5deg) scale(1.05);
 }
 
 #comparacao .chapter-img:hover #img__stripped-pyjamas {
-    transform: translateX(2rem) rotate(-7.5deg) scale(1.05);
+    transform: translateX(15%) rotate(-7.5deg) scale(1.05);
 }
 
 .book-img {
     transition: .3s;
+}
+
+.book-img > img {
+    height: min(40vw, 19rem);;
 }
