--- a/main.css
+++ b/main.css
@@ -12,7 +12,13 @@
     --content-max-width: min(100%, 40em);
     --content-distance: 1.5rem;
 
-    font-size: min(3.5vw, 3vh, 16px);
+    font-size: 80%;
+}
+
+@media screen and (min-width: 30rem) {
+    :root {
+        font-size: 100%;
+    }
 }
 
 *, ::after, ::before {
@@ -63,7 +69,7 @@ a {
     width: fit-content;
 }
 
-#nav li:not(:first-child) {
+#nav > ul > li:not(:first-child) {
     border-left: 0.1rem var(--color-text) solid;
     padding-left: 1.2rem;
     margin-left: 1.2rem;
