--- a/capitulos/capitulos.css
+++ b/capitulos/capitulos.css
@@ -7,7 +7,15 @@
     background-position: center;
     padding: 3rem;
     padding-top: 5rem;
+    position: relative;
 }
+
+#header::before {
+    content: '';
+    background: #1b242480;
+    position: absolute;
+    inset: 0;
+}  
 
 .title {
     font-size: 2.5rem;
@@ -32,6 +40,7 @@
     font-size: 1.2rem;
     margin-inline: auto;
     width: var(--content-max-width);
+    position: relative;
 }
 
 .content-text {
@@ -57,6 +66,21 @@
     background-color: var(--color-secondary);
     background-size: cover;
     background-position: center;
+    box-shadow: inset 0 0 3rem #12171770;
+    position: relative;
+    overflow: hidden;
+}
+
+.article::before {
+    content: '';
+    background-color: #15171080;
+
+    position: absolute;
+    inset: 0;
+}
+
+.article-title {
+    position: relative;
 }
 
 .previous-article {
@@ -102,5 +126,4 @@
     font-size: 1.25rem;
     display: flex;
     align-items: center;
-    opacity: .8;
 }
