--- a/main.css
+++ b/main.css
@@ -26,7 +26,7 @@
 }
 
 body {
-    background-color: var(--color-primary);
+    background-color: var(--color-secondary);
     color: var(--color-text);
 
     font-family: var(--font-normal);
